# backend

./: .gitignore  docker-compose.yaml  nginx.conf
application/app/: main.py  pyproject.toml
application/app/dependencies/: lifespan.py  requests.py
application/app/routers/applications/: pydantic_models.py  routes.py  service.py
application/app/routers/status/: routes.py  service.py
application/app/storages/: s3.py
application/app/storages/database/: _models.py
application/app/storages/database/models/: accounts.py  application.py  bki.py
application/app/storages/queues/: celery_app.py
application/app/storages/types/: files.py
audit/: Dockerfile
audit/app/: pyproject.toml
audit/app/storages/database/: database.py  models.py
audit/app/storages/queues/: celery_app.py
audit/app/tasks/: service.py  tasks.py
authentication/app/: main.py  pyproject.toml
authentication/app/dependencies/: lifespan.py  logger.py  queues.py
authentication/app/router/: __init__.py  routes.py  service.py
authentication/app/storages/database/: database.py  models.py
placeholder/app/: main.py  pyproject.toml
