[tool.poetry]
name = "auditsber"
version = "0.1.0"
description = ""
authors = ["darklorian <lolpokens@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = "^5.3.6"
redis = "^5.0.1"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
