[tool.poetry]
name = "authenticationcreditsber"
version = "0.1.0"
description = ""
authors = ["darklorian <lolpokens@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
python-multipart = "^0.0.6"
uvicorn = "^0.24.0.post1"
asyncpg = "^0.29.0"
redis = "^5.0.1"
celery = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
